// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree properties for state: error 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": "Some inline-notification heading.",
          "role": "StaticText",
        },
      ],
      "level": 5,
      "name": "Some inline-notification heading.",
      "role": "heading",
    },
    {
      "children": [
        {
          "name": "Some inline-notification description.",
          "role": "StaticText",
        },
      ],
      "name": "",
      "role": "paragraph",
    },
  ],
  "description": "Some inline-notification description.",
  "name": "Some inline-notification heading.",
  "role": "alert",
}
`;

exports[`accessibility should expose correct accessibility tree properties for state: info 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": "Some inline-notification heading.",
          "role": "StaticText",
        },
      ],
      "level": 5,
      "name": "Some inline-notification heading.",
      "role": "heading",
    },
    {
      "children": [
        {
          "name": "Some inline-notification description.",
          "role": "StaticText",
        },
      ],
      "name": "",
      "role": "paragraph",
    },
  ],
  "description": "Some inline-notification description.",
  "name": "Some inline-notification heading.",
  "role": "status",
}
`;

exports[`accessibility should expose correct accessibility tree properties for state: success 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": "Some inline-notification heading.",
          "role": "StaticText",
        },
      ],
      "level": 5,
      "name": "Some inline-notification heading.",
      "role": "heading",
    },
    {
      "children": [
        {
          "name": "Some inline-notification description.",
          "role": "StaticText",
        },
      ],
      "name": "",
      "role": "paragraph",
    },
  ],
  "description": "Some inline-notification description.",
  "name": "Some inline-notification heading.",
  "role": "status",
}
`;

exports[`accessibility should expose correct accessibility tree properties for state: warning 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": "Some inline-notification heading.",
          "role": "StaticText",
        },
      ],
      "level": 5,
      "name": "Some inline-notification heading.",
      "role": "heading",
    },
    {
      "children": [
        {
          "name": "Some inline-notification description.",
          "role": "StaticText",
        },
      ],
      "name": "",
      "role": "paragraph",
    },
  ],
  "description": "Some inline-notification description.",
  "name": "Some inline-notification heading.",
  "role": "alert",
}
`;
